--- a/project-manager.html
+++ b/project-manager.html
@@ -76,7 +76,7 @@
 <p><span class="badge badge-light">San Diego, California United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://burnsmcdonn.referrals.selectminds.com/jobs/ports-maritime-project-manager-6798'>Ports & Maritime Project Manager - Burns & McDonnell Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://burnsmcdonn.referrals.selectminds.com/jobs/ports-maritime-project-manager-6798'>Ports & Maritime Project Manager - Burns & McDonnell Careers</a></h5> 
 <p><span class="badge badge-light">United States  California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -98,7 +98,7 @@
 <p><span class="badge badge-light">North Billerica, Massachusetts</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://astcorporation.applytojob.com/apply/UhXVbwW6sn/Project-Manager-Oracle-Cloud'>Project Manager - Oracle Cloud - Applications Software Technology LLC - Career Page</a></h5> 
+<h5><a href='http://astcorporation.applytojob.com/apply/UhXVbwW6sn/Project-Manager-Oracle-Cloud'>Project Manager - Oracle Cloud - Applications Software Technology LLC - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -154,7 +154,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/nmr-consulting/job/oW5rbfwn'>NMR Consulting Careers - Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nmr-consulting/job/oW5rbfwn'>NMR Consulting Careers - Project Manager</a></h5> 
 <p><span class="badge badge-light">Baltimore, Maryland  Baltimore, MD</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -178,7 +178,7 @@
 <p><span class="badge badge-light">Charlotte North Carolina</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/services/sr-project-manager-emea-1902704/?gh_src=82a8057f1'>Sr. Project Manager, EMEA | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/services/sr-project-manager-emea-1902704/?gh_src=82a8057f1'>Sr. Project Manager, EMEA | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -254,11 +254,11 @@
 <p><span class="badge badge-light">New York, NY New York, NY United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://veteransezinfoinc.applytojob.com/apply/wRJoJjrAHA/Sustainment-Project-Manager-Remote-Opportunity'>Sustainment Project Manager (Remote Opportunity) - Veterans EZ Info Inc - Career Page</a></h5> 
+<h5><a href='http://veteransezinfoinc.applytojob.com/apply/wRJoJjrAHA/Sustainment-Project-Manager-Remote-Opportunity'>Sustainment Project Manager (Remote Opportunity) - Veterans EZ Info Inc - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/creatoriq/jobs/4498337002'>Job Application for Implementation Project Manager at CreatorIQ</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/creatoriq/jobs/4498337002'>Job Application for Implementation Project Manager at CreatorIQ</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -266,7 +266,7 @@
 <p><span class="badge badge-light">Columbus, OH, USA  Columbus, OH</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://spiritstaffingandconsultinginc.applytojob.com/apply/7rhshRc6Dj/Junior-Engineering-Project-Manager-Special-Projects-9602316-1'>Junior Engineering Project Manager (Special Projects) 9602316 - (1) - Spirit Staffing and Consulting Inc. - Career Page</a></h5> 
+<h5><a href='http://spiritstaffingandconsultinginc.applytojob.com/apply/7rhshRc6Dj/Junior-Engineering-Project-Manager-Special-Projects-9602316-1'>Junior Engineering Project Manager (Special Projects) 9602316 - (1) - Spirit Staffing and Consulting Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -408,7 +408,7 @@
 <p><span class="badge badge-light">Dublin Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://siftly.com/jobs/3888'>Assistant Account Executive / Associate Project Manager | SIFTLY</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://siftly.com/jobs/3888'>Assistant Account Executive / Associate Project Manager | SIFTLY</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
